; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_route.c_setenv_routes_ipv6.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_route.c_setenv_routes_ipv6.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.env_set = type { i32 }
%struct.route_ipv6_list = type { %struct.route_ipv6* }
%struct.route_ipv6 = type { %struct.route_ipv6* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @setenv_routes_ipv6(%struct.env_set* %0, %struct.route_ipv6_list* %1) #0 {
  %3 = alloca %struct.env_set*, align 8
  %4 = alloca %struct.route_ipv6_list*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.route_ipv6*, align 8
  store %struct.env_set* %0, %struct.env_set** %3, align 8
  store %struct.route_ipv6_list* %1, %struct.route_ipv6_list** %4, align 8
  store i32 1, i32* %5, align 4
  %7 = load %struct.route_ipv6_list*, %struct.route_ipv6_list** %4, align 8
  %8 = getelementptr inbounds %struct.route_ipv6_list, %struct.route_ipv6_list* %7, i32 0, i32 0
  %9 = load %struct.route_ipv6*, %struct.route_ipv6** %8, align 8
  store %struct.route_ipv6* %9, %struct.route_ipv6** %6, align 8
  br label %10

10:                                               ; preds = %19, %2
  %11 = load %struct.route_ipv6*, %struct.route_ipv6** %6, align 8
  %12 = icmp ne %struct.route_ipv6* %11, null
  br i1 %12, label %13, label %23

13:                                               ; preds = %10
  %14 = load %struct.env_set*, %struct.env_set** %3, align 8
  %15 = load %struct.route_ipv6*, %struct.route_ipv6** %6, align 8
  %16 = load i32, i32* %5, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %5, align 4
  %18 = call i32 @setenv_route_ipv6(%struct.env_set* %14, %struct.route_ipv6* %15, i32 %16)
  br label %19

19:                                               ; preds = %13
  %20 = load %struct.route_ipv6*, %struct.route_ipv6** %6, align 8
  %21 = getelementptr inbounds %struct.route_ipv6, %struct.route_ipv6* %20, i32 0, i32 0
  %22 = load %struct.route_ipv6*, %struct.route_ipv6** %21, align 8
  store %struct.route_ipv6* %22, %struct.route_ipv6** %6, align 8
  br label %10

23:                                               ; preds = %10
  ret void
}

declare dso_local i32 @setenv_route_ipv6(%struct.env_set*, %struct.route_ipv6*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
